Make final corrections

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -33,6 +33,11 @@ h2 {
     font-weight: 300;
 }
 
+p {
+    font-size: 1.3125rem;
+    color: gray;
+}
+
 .icon {
     display: block;
     margin: 15px auto;
@@ -40,8 +45,7 @@ h2 {
 
 /*Footer*/
 
-footer {
+footer p {
     text-align: right;
-    color: gray;
     margin-top: 15px;
 }
